--- a/templates/account/auth.html
+++ b/templates/account/auth.html
@@ -4,7 +4,7 @@
 <div class="container ">
     <div class="row">
         <div class="col-lg-3 m-auto ">
-            <h1 class="display-4 font-italic text-center "><a href="/" class="text-decoration-none">OODAsite</a></h1>
+            <h1 class="display-4 font-italic text-center "><a href="/" class="text-decoration-none"><span style="white-space:nowrap;">質問投稿ナビ</span></a></h1>
             </div>
             <div class="col-lg-3 m-auto ">
             
