--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
 <div class="container ">
     <div class="row">
         <div class="col-lg-3 m-auto ">
-            <h1 class="display-4 font-italic text-center "><a href="/" class="text-decoration-none">MySite</a></h1>
+            <h1 class="display-4 font-italic text-center "><a href="/" class="text-decoration-none">質問投稿ナビ</a></h1>
             </div>
             <div class="col-lg-3 m-auto ">
             <form class="form-signin mx-4" method="POST">
