--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -13,12 +13,13 @@
         </div>
     </div>
     <div class="row mb-2">
+        <h3>皆が気になる問題</h3>
          {% for obj in ranks %}
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 
             shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-primary">Django</strong>
+                <strong class="d-inline-block mb-2 text-primary"></strong>
                 <h3 class="mb-0">{{ obj.title }}</h3>
                 <div class="mb-1 text-muted">{{ obj.created_at }}</div>
                 <p class="card-text mb-auto">{{ obj.text }}</p>
