--- a/templates/account/snippets/comment.html
+++ b/templates/account/snippets/comment.html
@@ -1,29 +1,34 @@
 <div>
-    <h3 class="h6">コメント</h3>
+    <h3 class="h6">コメント投稿</h3>
     <div class="list-group">
     {% for comment in comments %}
          <a class="list-group-item list-group-item-action p-3 rounded-0">
-          <p class="m-0"><small>{{comment.comment}}</small></p>
           <p class="m-0">
                <small>
                    {{comment.user.profile.username}}さん
-                   {{comment.created_at}}
                </small>
                </p>
+               <p class="m-0"><small>{{comment.comment}}</small></p>
           <p class="m-0">{% if comment.image %}
                <img src="{{comment.image.url}}">
                {% endif %}</p>
-
-         </a>   
+          <p class="small text-muted text-right">{{ comment.created_at }} </p>
+         </a>
+            
    {% endfor %}
    </div>
 
 {% if user.is_authenticated %}
 <div class="container">
     <form method="POST" class="my-4" enctype="multipart/form-data">
-     {{form.as_p}}
      {% csrf_token %}
-          
+     <label>コメント</label>
+     <div class="form-group">
+       {{ form.comment }}
+     </div>
+     <div class="form-group">
+          <label>画像:</label>{{ form.image }}
+     </div>
                <button class="btn btn-sm btn-outline-success" type="submit">
                コメントする
                </button>
