--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -8,17 +8,23 @@
 <main class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3 class="pb-4 font-italic border-bottom">
+            <h3 class="pb-4 font-italic border-bottom"></h3>
+            <p class="small text-muted text-left">
+                {% if article.user.profile.username %}{{ article.user.profile.username }}さん
+                {% else %}
+                匿名ユーザーさん
+                {% endif %}
+            </p>  
+                
+            <p> {{article.text}}</p>
                 {% if article.image %}
                 <img src="{{article.image.url}}" class="img-fluid">
                 {% else %}
                 <img src="{% static 'account/default.jpg' %}" class="img-fluid">
                 {% endif %} 
-            </h3>
-            <p class="small text-muted text-right">{{article.created_at}} {{article.author}}</p>
-            <p>{{article.text}}</p>
-
+            <p class="small text-muted text-right">{{article.created_at}} </p>
             
+            {% include 'account/snippets/like_count.html' %}
             
             {% include 'account/snippets/tags.html' %}
             
