--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -4,36 +4,51 @@
 <html lang="ja" dir="ltr">
 <head>
 <title>質問箱</title>
-<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
 
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
 </head>
 
 <body>
-<div id="header">
-    <div id="branding">
-        <h1><a href="/">質問箱</a></h1>
-    </div>
-</div>
+  
+    <main class="container">
+        <div class="row">
+            <div class="col-md-8">
+              <h1 class="pb-4 mb-4 font-italic border-bottom">
+                <a href="/view_mypage/" class="text-decoration-none">
+                マイページ</a>
+            </h1>
     
 <div>
     <div>
         <div>
             <h1></h1>
             <div>
-                <form class="row g-3" method="POST" enctype="multipart/form-data">
-                    {{ form.as_p }}
+              {% if user.is_authenticated %}
+                <form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
-                    
- 
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-primary">送信</button>
+                    <label>本文</label>
+                    <div class="form-group">
+                      {{ form.text }}
                     </div>
-                </form>
+                    <div class="form-group">
+                      <label>画像:</label>{{ form.image }}
+                    </div>
+                    <div class="form-group">
+                      <label>教科:</label> {{ form.tags }}
+                    </div>
+                        
+        
+         
+                    <div class="col-12">
+                      <button type="submit" class="btn btn-success">投稿する</button>
+                    </div>
+                  </form>
   
-            </div>
-
+            {% else %}
+            <p class="my-4">
+            コメントを投稿するには<a href="/login/">ログイン</a>してください。
+            </p>
+            {% endif %}
+        </div>
         </div>
     </div>
 </div>
