--- a/templates/blog/blog1.html
+++ b/templates/blog/blog1.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
   <main class="container">
-
+<aaaaa>
     <div class="row">
       <h3 class="pb-4 font-italic border-bottom">
         {{ page_title}}
