--- a/templates/blog/blog1.html
+++ b/templates/blog/blog1.html
@@ -3,7 +3,6 @@
 {% block content %}
 {% load static %}
   <main class="container">
-<h1>aaaaaaaaaa</h1>
     <div class="row">
       <h3 class="pb-4 font-italic border-bottom">
         {{ page_title}}
@@ -19,7 +18,7 @@
             
           <div class="card shadow-sm">
                 {% if objs.image %}
-                <img src="{{objs.image.url}}" alt="{{ objs.image.name }}"class="img-fluid">
+                <img src="{{objs.image.name}}" class="img-fluid">
                 {% else %}
                 <img src="{% static 'account/default.jpg' %}" class="img-fluid">
                 {% endif %}
