--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -59,6 +59,8 @@
               <div class="card shadow-sm">
                     {% if objs.image %}
                     <img src="{{objs.image.name}}" class="img-fluid">
+                    {% load cloudinary %}
+                    {% cloudinary objs.image.name width=100 height=100 %}
                     {% else %}
                     <img src="{% static 'account/default.jpg' %}" class="img-fluid">
                     {% endif %}
