--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -59,6 +59,7 @@
               <div class="card shadow-sm">
                     {% if objs.image %}
                     <img src="{{objs.image.name}}" class="img-fluid">
+                    <img src="{{ objs.image.url }}" alt="{{ objs.image.name }}">
                     {% load cloudinary %}
                     {% cloudinary objs.image.name width=100 height=100 %}
                     {% else %}
