--- a/templates/account/view_mypage.html
+++ b/templates/account/view_mypage.html
@@ -13,7 +13,7 @@
         <div class="col-md-4">
             <div class="card mb-2">
                 {% if user.profile.image %}
-                <img src="{{ user.profile.image.url }}" class="img-fluid">
+                <img src="{{ user.profile.image.url }}" alt="{{ user.profile.image.name }}" class="img-fluid">
                 {% else %}
                 <img src="{% static 'account/person.jpg' %}" 
                 class="rounded-circle">
