--- a/templates/account/view_mypage.html
+++ b/templates/account/view_mypage.html
@@ -16,7 +16,7 @@
                 <img src="{{ user.profile.image.url }}" alt="{{ user.profile.image.name }}" class="img-fluid">
                 {% else %}
                 <img src="{% static 'account/person.jpg' %}" 
-                class="rounded-circle">
+                class="rounded-circle img-fluid">
                 {% endif %}
                 <p class="small text-muted text-center">
                     {% if user.profile.username %}{{ user.profile.username }}
