--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -2,14 +2,17 @@
 
 {% block content %}
 {% load static %}
+{% load cache %}
 <div class="container">    
     <div class="p-4 p-md-5 mb-4 rounded bg-warning">
         <div class="col-md-6 px-0">
+            {% cache 600 qa %}
             <h1 class="display-4 font-italic">質問箱</h1>
             <p class="lead my-3">勉強をしている中で分からない問題を投稿しよう</p>
             <p class="lead mb-0">
                 <a href="/blog/post/" class="font-weight-bold">質問する</a>
             </p>
+            {% endcache %}
         </div>
     </div>
     <div class="row mb-2">
