--- a/templates/account/snippets/header.html
+++ b/templates/account/snippets/header.html
@@ -1,10 +1,13 @@
 {% load static %}
+{% load cache %}
 <div class="container">
     <header class="py-3">
         <div class="carousel-inner">
             <div class="item active">
+                {% cache 86400 header %}
                 <img class="figure-img img-fluid rounded"
                 src="{% static 'account/mole.jpg' %}" width="50%" height="225">
+                {% endcache %}
                 <div class="carousel-caption">
                     
                     <div class="row flex-nowrap justify-content-center align-item-center">
