--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -34,20 +34,7 @@
                     </div>
                     <div class="form-group">
                       <label>教科:</label>
-                      <select name="tags" id="id_tags" multiple>
-                        <option value="国語">国語</option>
-                      
-                        <option value="数学">数学</option>
-                      
-                        <option value="英語">英語</option>
-                      
-                        <option value="理科">理科</option>
-                      
-                        <option value="社会">社会</option>
-                      
-                        <option value="その他">その他</option>
-                      
-                      </select>
+                      {{ form.tags }}
                     </div>
                         
         
