--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -34,7 +34,21 @@
                     </div>
                     <div class="form-group">
                       <label>教科:</label>
-                      {{ form.tags }}
+                      <div class="related-widget-wrapper">
+                        <select name="tags" id="id_tags" multiple>
+                      <option value="1">国語</option>
+                    
+                      <option value="2">数学</option>
+                    
+                      <option value="3">英語</option>
+                    
+                      <option value="4" selected>理科</option>
+                    
+                      <option value="5">社会</option>
+                    
+                      <option value="6">その他</option>
+                    
+                    </select>
                     </div>
                         
         
