--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -34,8 +34,7 @@
                     </div>
                     <div class="form-group">
                       <label>教科:</label>
-                      <div class="related-widget-wrapper">
-                        <select name="tags" id="id_tags" class="form-select">
+                        <select name="tags" id="id_tags" multiple>
                       <option value="1">国語</option>
                     
                       <option value="2">数学</option>
