--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -32,22 +32,9 @@
                     <div class="form-group">
                       <label>画像:</label>{{ form.image }}
                     </div>
-                    <div class="form-group">
-                      <label>教科:</label>
-                      <select name="tags" id="id_tags" multiple>
-                      <option value="1">国語</option>
-                    
-                      <option value="2">数学</option>
-                    
-                      <option value="3">英語</option>
-                    
-                      <option value="4">理科</option>
-                    
-                      <option value="5">社会</option>
-                    
-                      <option value="6">その他</option>
-                    
-                      </select>
+                    <div>
+                      <label class="form-label">教科:</label>
+                      {{ form.tags }}
                     </div>
                         
         
