--- a/templates/account/snippets/header.html
+++ b/templates/account/snippets/header.html
@@ -28,7 +28,7 @@
             {% if user.is_authenticated %}
             <div>
              <a href="/logout/" class="link-secondaly">ログアウト</a>
-             <a href="/view_mypage/" class="link-secondaly">マイページ</a>
+             <a href="/view/" class="link-secondaly">マイページ</a>
             </div>
              {% else %}
              <div>
