--- a/templates/account/mypage.html
+++ b/templates/account/mypage.html
@@ -6,8 +6,8 @@
     <div class="row">
         <div class="col-md-8">
           <h3 class="pb-4 mb-4 font-italic border-bottom">
-            <a href="/view_mypage/" class="text-decoration-none">
-            マイページ</a>
+            <a href="/" class="text-decoration-none">
+            トップに戻る</a>
         </h3>
  
         <form class="row g-3" method="POST" enctype="multipart/form-data">
