--- a/templates/account/view.html
+++ b/templates/account/view.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 {% load static %}
+
 <main class="container">
     <div class="row">
         <div class="col-md-8">
         <h3 class="pb-4 mb-4 font-italic border-bottom">
-            <a href="/view_mypage/" class="text-decoration-none">
+            <a href="/view/" class="text-decoration-none">
             マイページ</a>
         </h3>
         <div class="row">
@@ -42,7 +43,45 @@
         </div>
         
     </div>
+
+
+</main>
+
+<main class="container">
+    <h3>質問した問題</h3>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    {% for objs in articles %}
+
+
+
     
+    <div class="col">
+        
+      <div class="card shadow-sm">
+            {% if objs.image %}
+            <img src="{{ objs.image.url }}" alt="{{ objs.image.name }}" class="img-fluid">
+            {% else %}
+            <img src="{% static 'account/default.jpg' %}" class="img-fluid">
+            {% endif %}
+        
+      
+        <div class="card-body">
+
+          <p class="card-text"></p>
+          
+          <div class="d-flex justify-content-between align-items-center">
+            
+
+            
+              <a href='/blog/{{objs.id}}/' class="">続きはこちら</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+{% endfor %}
+</div>
 </main>
 
 {% endblock %}
