--- a/templates/blog/blogs.html
+++ b/templates/blog/blogs.html
@@ -1,28 +1,53 @@
 {% extends 'account/base.html' %}
 
 {% block content %}
-    
-<main class="container">
+{% load static %}
+  <main class="container">
     <div class="row">
-        <div class="col-md-8">
-            <h3 class="pb-4 font-italic border-bottom">
-                {{ page_title}}
-            </h3>
-            {% for objs in page_obj %}
-            <div class="blog-post">
-                <h2 class="blog-post-title">{{objs.title}}</h2>
-                <p class="blog-post-meta">{{objs.created_at}}by
-                <a href="#">{{objs.author}}</a></p>
-            <a href='/blog/{{objs.id}}/' class="">続きはこちら</a>
+      <h3 class="pb-4 font-italic border-bottom">
+        {{ page_title}}
+    </h3>
+    
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        {% for objs in page_obj %}
+
+    
+  
+        
+        <div class="col">
             
+          <div class="card shadow-sm">
+                {% if objs.image %}
+                <img src="{{ objs.image.url }}" alt="{{ objs.image.name }}" class="img-fluid">
+                {% else %}
+                <img src="{% static 'account/default.jpg' %}" class="img-fluid">
+                {% endif %}
+            
+          
+            <div class="card-body">
+    
+              <p class="card-text"></p>
+              
+              <div class="d-flex justify-content-between align-items-center">
+                
+    
+                
+                  <a href='/blog/{{objs.id}}/' class="">続きはこちら</a>
+              </div>
             </div>
-            {% endfor %}
-            
-        {%include "account/snippets/pagination.html"%}
-            
+          </div>
         </div>
-        {% include  'account/snippets/sidebar.html'%}
+
+
+{% endfor %}
     </div>
+{%include "account/snippets/pagination.html"%}
+</div>
+</div>
+
+
+
 </main>
+
 
 {% endblock %}
