--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -13,8 +13,8 @@
         <div class="row">
             <div class="col-md-8">
               <h1 class="pb-4 mb-4 font-italic border-bottom">
-                <a href="/view_mypage/" class="text-decoration-none">
-                マイページ</a>
+                <a href="/" class="text-decoration-none">
+                トップに戻る</a>
             </h1>
     
 <div>
