--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -28,6 +28,8 @@
             
             {% include 'account/snippets/tags.html' %}
             
+            {% include 'account/snippets/answer_able.html' %}
+
             <hr class="my-4">
             {% include 'account/snippets/comment.html' %}
             
