--- a/templates/account/snippets/head.html
+++ b/templates/account/snippets/head.html
@@ -5,5 +5,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
    
-
+    <link rel="icon" type="image/png" href="static/account/mole.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/account/mole.jpg">
     <title>質問箱(大学受験用)</title>
